# backend/public/swagger.json
@@ -114,52 +114,6 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"MoveOutputDTO": {
-				"properties": {
-					"id": {
-						"$ref": "#/components/schemas/GameOutputDTO"
-					},
-					"move": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"id",
-					"move"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"MoveInputDTO": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"move": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"id",
-					"move"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"MoveInputPatchDTO": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"move": {
-						"type": "string"
-					}
-				},
-				"type": "object",
-				"additionalProperties": false
-			},
 			"GameInputDTO": {
 				"properties": {
 					"white_id": {
@@ -472,188 +426,6 @@
 						}
 					}
 				]
-			}
-		},
-		"/moves": {
-			"get": {
-				"operationId": "GetAllMoves",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/MoveOutputDTO"
-									},
-									"type": "array"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Move"
-				],
-				"security": [
-					{
-						"jwt": [
-							"game:read"
-						]
-					}
-				],
-				"parameters": []
-			},
-			"post": {
-				"operationId": "CreateMove",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/MoveOutputDTO"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Move"
-				],
-				"security": [
-					{
-						"jwt": [
-							"game:create"
-						]
-					}
-				],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/MoveInputDTO"
-							}
-						}
-					}
-				}
-			}
-		},
-		"/moves/{id}": {
-			"get": {
-				"operationId": "GetMoveById",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/MoveOutputDTO"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Move"
-				],
-				"security": [
-					{
-						"jwt": [
-							"game:read"
-						]
-					}
-				],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					}
-				]
-			},
-			"delete": {
-				"operationId": "DeleteMove",
-				"responses": {
-					"204": {
-						"description": "No content"
-					}
-				},
-				"tags": [
-					"Move"
-				],
-				"security": [
-					{
-						"jwt": [
-							"game:delete"
-						]
-					}
-				],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					}
-				]
-			}
-		},
-		"/moves/update/{id}": {
-			"patch": {
-				"operationId": "UpdateMove",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/MoveOutputDTO"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Move"
-				],
-				"security": [
-					{
-						"jwt": [
-							"game:create"
-						]
-					}
-				],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					}
-				],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/MoveInputPatchDTO"
-							}
-						}
-					}
-				}
 			}
 		},
 		"/games": {
